2002-11-26  CLAM_0_4_0-rel 
'Fly examples, fly to seattle' release
  * General:
      ** Directory reorganization
      ** CLAM_WARNING macros with customizable behaviour
      ** New integrated examples: Salto and Rappid
  * AnalisysSysthesis:
      ** Major rework
  * SpectralDelay:
      ** Stability and performance enhancements
      ** New filter control interface
  * Dynamic Types:
      ** Attribute visitors
  * Standard:
      ** Enum method to get the symbol mapping
      ** Added TabFunct to deal with precalculed function tables
  * SDIF:
      ** Added SDIF support for storing analysis result in a binary format
  * Visualization Module( GUI )
      ** Automatic user interface generation for editing configurations
      ** A lot of bug fixes (see Mantis)
  * XML:
      ** Now a given order between sibling xml elements is always required to
         boost the performance a little
      ** Multiple XML implementations can be selected (currently XercesC++ and
         Gnome-libxml)
      ** DOMPrint is not used anymore
      ** XMLStorage internal refactoring to improve mantainability, clearness
         and future improvements
  * LADSPA
      ** Added support for writing LASDPA plug-ins
  * Examples
      ** The following examples are now running and fairly debugged: SALTO, 
         AnalysisSynthesis, SpectralDelay and Rappid
  * Unix build system
      ** Selective clean
      ** Include paths not shown on the command line
  * Windows build system
      ** Workspaces reorganization



2002-04-26  CLAM_0_3_0-rel

  * General:
      ** CLAM code is now released under GPL license.
      ** MTG namespace becomes CLAM namespace
      ** All library macros have 'CLAM_' as prefix
      ** PARANOID support has been dropped.
      ** New error handling macros.
      ** More tests and examples
  * Dynamic Types:
      ** New DT macros
      ** AddAll, RemoveAll
      ** User init-methods: DefaultInit, CopyInit. Macro-expanded-init:
         MandatoryInit