@@ -75,9 +75,6 @@ public:
 /** Analysis Window type*/
 	void SetAnalWindowType(const EWindowType& t);
 	const EWindowType& GetAnalWindowType() const;
-/** Analysis Zero padding factor*/
-	void SetZeroPadding(int z);
-	int GetZeroPadding() const;
 /** Synthesis window size*/
 	void SetSynthWindowSize(TSize w);
 	TSize GetSynthWindowSize()const;
